name:                raw-proxy
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/tolysz/raw-proxy#readme
license:             BSD3
license-file:        LICENSE
author:              Marcin Tolysz
maintainer:          tolysz@gmail.com
copyright:           2015(c) Marcin Tolysz
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable raw-proxy
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
               ,       conduit-extra
               ,       http-reverse-proxy
               ,       bytestring
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
